--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/express": "^4.17.21",
     "@types/node": "20.11.5",
     "gts": "^5.3.0",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.4.3"
   },
   "dependencies": {
