--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "20.11.5",
+    "@types/swagger-jsdoc": "^6.0.4",
     "gts": "^5.3.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.3"
   },
   "dependencies": {
+    "@types/swagger-ui-express": "^4.1.6",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
