--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,11 @@
       "files": ["tests/**/*"],
       "env": {
         "jest": true
+      },
+      "rules": {
+        "node/no-unpublished-import": ["error", {
+          "allowModules": ["supertest"]
+        }]
       }
     }
   ]
