--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node build/server.js",
     "test": "jest",
     "lint": "gts lint",
     "clean": "gts clean",
