Fix typo in deploy workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,7 +11,7 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-22.04
     steps:
-      - Name: Deploy to DigitalOcean
+      - name: Deploy to DigitalOcean
         uses: digitalocean/app_action@v1.1.6
         with:
           app_name: nihongo_api
