--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node build/server.js",
+    "prestart": "npm run compile",
     "test": "jest",
     "lint": "gts lint",
     "clean": "gts clean",
